COnfiguration and CSS change

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,10 @@
       <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.2/angular.js"></script>
       <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.2/angular-resource.min.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
-      <script type="text/javascript" src="assets/speech.js"></script>
+<!--       <script type="text/javascript" src="assets/speech.js"></script>
       <script type="text/javascript" src="assets/recorder.js"></script>
       <link rel="stylesheet" href="assets/speech.css"></link>
-      <link rel="stylesheet" href="assets/chatbox.css"></link>
+      <link rel="stylesheet" href="assets/chatbox.css"></link> -->
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
