--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
       <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.2/angular.js"></script>
       <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.2/angular-resource.min.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
+      <script src="https://cdn.webrtc-experiment.com/MediaStreamRecorder.js"> </script>
 <!--       <script type="text/javascript" src="assets/speech.js"></script>
       <script type="text/javascript" src="assets/recorder.js"></script>
       <link rel="stylesheet" href="assets/speech.css"></link>
