--- a/app/assets/stylesheets/chatbox.css
+++ b/app/assets/stylesheets/chatbox.css
@@ -70,7 +70,7 @@ img{ max-width:100%;}
 
 .type_msg {border-top: 1px solid #c4c4c4;position: relative;}
 .msg_send_btn {
-  background: #05728f none repeat scroll 0 0;
+  /*background: #05728f none repeat scroll 0 0;*/
   border: medium none;
   border-radius: 50%;
   color: #fff;
